[IRGen] Foreign metadata is lazy metadata, always.

Treat foreign metadata as lazy metadata, emitted when needed.
Fixes SR-9397 / rdar://problem/46423275.

(cherry picked from commit f18aa80ba1f4152dbc0634a9b7288045e000db01)